# web-scrapper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  extracted_offers.json  main.py  pyproject.toml  setup.cfg
web-scrapper/: _main.py
web-scrapper/scrappers/: utils.py
web-scrapper/scrappers/audi/: audi_scrapper.py  models_library.py
web_scrapper/: _main.py  main.py  settings.py
web_scrapper/scrappers/: utils.py
web_scrapper/scrappers/audi/: audi_scrapper.py  models_library.py  offer_extractor_agent.py  utils.py
web_scrapper/scrappers/audi/extractor_agent/: offer_extractor_agent.py  prompts.py
