[tool.poetry]
name = "web-scrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


packages = [
    { include = "web_scrapper" }
]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
